apps/development/bandung-coffeeshop-fe/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: bandung-coffeeshop-fe-service
spec:
  selector:
    app: bandung-coffeeshop-fe
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
