apps/development/bandung-coffeeshop-fe/envoy-basicauth.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: bdgcafe-dev-basicauth
  namespace: envoy
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: bandung-coffeeshop-fe-dev
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: bandung-coffeeshop-be-dev
  basicAuth:
    users:
      name: bdgcafe-dev-basic-auth
